--- a/docs/sensor_predict_solns.tex
+++ b/docs/sensor_predict_solns.tex
@@ -5,25 +5,35 @@
 
 \begin{document}
 
-the equation for the first line is
+\begin{align*}
+\intertext{the equation for the first line is}\\
+y - y_{1} &= \left(x - x_{1}\right) \tan{\left (\alpha + \theta \right )}\\
+\intertext{the equation for the second line is}\\
+r &= x \cos{\left (\beta \right )} + y \sin{\left (\beta \right )}\\
+\intertext{minimising $\theta$ and the corresponding values of $x$ and $y$ are}
+\theta &= - \alpha + \operatorname{atan}{\left (\tan{\left (\beta \right )} \right )}\\
+x &= \frac{r + x_{1} \sin{\left (\beta \right )} \tan{\left (\beta \right )} - y_{1} \sin{\left (\beta \right )}}{\sin{\left (\beta \right )} \tan{\left (\beta \right )} + \cos{\left (\beta \right )}}\\
+y &= \frac{y_{1} \cos{\left (\beta \right )} + \left(r - x_{1} \cos{\left (\beta \right )}\right) \tan{\left (\beta \right )}}{\sin{\left (\beta \right )} \tan{\left (\beta \right )} + \cos{\left (\beta \right )}}
+\intertext{the minimised value of the distance is}
+d^2   &= \left(- x_{1} + \frac{r + x_{1} \sin{\left (\beta \right )} \tan{\left (\beta \right )} - y_{1} \sin{\left (\beta \right )}}{\sin{\left (\beta \right )} \tan{\left (\beta \right )} + \cos{\left (\beta \right )}}\right)^{2} \\
+    &+ \left(- y_{1} + \frac{y_{1} \cos{\left (\beta \right )} + \left(r - x_{1} \cos{\left (\beta \right )}\right) \tan{\left (\beta \right )}}{\sin{\left (\beta \right )} \tan{\left (\beta \right )} + \cos{\left (\beta \right )}}\right)^{2}\\
+\end{align*}
 
-$$y - y_{1} - \left(x - x_{1}\right) \tan{\left (\alpha + \theta \right )} = 0$$
+After computing the minimising $\theta$ and corresponding $x$ and $y$, it is a good idea to check if $x$ and $y$ actually lie on the feature (if we choose to demarcate the lines into line-segments using the point features), and whether $\theta$ actually lies within the cone of the sensor. If both checks pass, then we can update the minimum distance of the sensor. In addition, we should also check the endpoints of the cone ($\theta = \pm\frac{\pi}{12}$), the formulae for $x$, $y$ and $d$ in those cases follow.
 
-the equation for the second line is
+\begin{align*}
+\theta &= \frac{\pi}{12}\\
+x &= \frac{r + x_{1} \sin{\left (\beta \right )} \tan{\left (\alpha + \frac{\pi}{12} \right )} - y_{1} \sin{\left (\beta \right )}}{\sin{\left (\beta \right )} \tan{\left (\alpha + \frac{\pi}{12} \right )} + \cos{\left (\beta \right )}}\\
+y &= \frac{y_{1} \cos{\left (\beta \right )} + \left(r - x_{1} \cos{\left (\beta \right )}\right) \tan{\left (\alpha + \frac{\pi}{12} \right )}}{\sin{\left (\beta \right )} \tan{\left (\alpha + \frac{\pi}{12} \right )} + \cos{\left (\beta \right )}}\\
+d^2   &= \left(- x_{1} + \frac{r + x_{1} \sin{\left (\beta \right )} \tan{\left (\alpha + \frac{\pi}{12} \right )} - y_{1} \sin{\left (\beta \right )}}{\sin{\left (\beta \right )} \tan{\left (\alpha + \frac{\pi}{12} \right )} + \cos{\left (\beta \right )}}\right)^{2} \\
+    &+ \left(- y_{1} + \frac{y_{1} \cos{\left (\beta \right )} + \left(r - x_{1} \cos{\left (\beta \right )}\right) \tan{\left (\alpha + \frac{\pi}{12} \right )}}{\sin{\left (\beta \right )} \tan{\left (\alpha + \frac{\pi}{12} \right )} + \cos{\left (\beta \right )}}\right)^{2}\\\\
+\theta &= -\frac{\pi}{12}\\
+x &= \frac{r - x_{1} \sin{\left (\beta \right )} \cot{\left (\alpha + \frac{5 \pi}{12} \right )} - y_{1} \sin{\left (\beta \right )}}{- \sin{\left (\beta \right )} \cot{\left (\alpha + \frac{5 \pi}{12} \right )} + \cos{\left (\beta \right )}}\\
+y &= \frac{y_{1} \cos{\left (\beta \right )} - \left(r - x_{1} \cos{\left (\beta \right )}\right) \cot{\left (\alpha + \frac{5 \pi}{12} \right )}}{- \sin{\left (\beta \right )} \cot{\left (\alpha + \frac{5 \pi}{12} \right )} + \cos{\left (\beta \right )}}\\
+d^2 &= \left(- x_{1} + \frac{r - x_{1} \sin{\left (\beta \right )} \cot{\left (\alpha + \frac{5 \pi}{12} \right )} - y_{1} \sin{\left (\beta \right )}}{- \sin{\left (\beta \right )} \cot{\left (\alpha + \frac{5 \pi}{12} \right )} + \cos{\left (\beta \right )}}\right)^{2} \\
+    &+ \left(- y_{1} + \frac{y_{1} \cos{\left (\beta \right )} - \left(r - x_{1} \cos{\left (\beta \right )}\right) \cot{\left (\alpha + \frac{5 \pi}{12} \right )}}{- \sin{\left (\beta \right )} \cot{\left (\alpha + \frac{5 \pi}{12} \right )} + \cos{\left (\beta \right )}}\right)^{2}
+\end{align*}
 
-$$- r + x \cos{\left (\beta \right )} + y \sin{\left (\beta \right )} = 0$$
-
-minimising theta and the corresponding values of x and y are
-$$\theta = - \alpha - \operatorname{atan}{\left (\frac{1}{\tan{\left (\beta \right )}} \right )}$$
-
-$$x = \frac{r - \frac{x_{1} \sin{\left (\beta \right )}}{\tan{\left (\beta \right )}} - y_{1} \sin{\left (\beta \right )}}{- \frac{\sin{\left (\beta \right )}}{\tan{\left (\beta \right )}} + \cos{\left (\beta \right )}}$$
-
-$$y = \frac{y_{1} \cos{\left (\beta \right )} - \frac{r - x_{1} \cos{\left (\beta \right )}}{\tan{\left (\beta \right )}}}{- \frac{\sin{\left (\beta \right )}}{\tan{\left (\beta \right )}} + \cos{\left (\beta \right )}}$$
-
-$$\theta = - \alpha + \operatorname{atan}{\left (\tan{\left (\beta \right )} \right )}$$
-
-$$x = \frac{r + x_{1} \sin{\left (\beta \right )} \tan{\left (\beta \right )} - y_{1} \sin{\left (\beta \right )}}{\sin{\left (\beta \right )} \tan{\left (\beta \right )} + \cos{\left (\beta \right )}}$$
-
-$$y = \frac{y_{1} \cos{\left (\beta \right )} + \left(r - x_{1} \cos{\left (\beta \right )}\right) \tan{\left (\beta \right )}}{\sin{\left (\beta \right )} \tan{\left (\beta \right )} + \cos{\left (\beta \right )}}$$
+Notice that these formulae were ``derived'' using sympy, so they are not simplified.
 
 \end{document}
