--- a/docs/sensor_predict_solns.tex
+++ b/docs/sensor_predict_solns.tex
@@ -15,8 +15,7 @@ r &= x \cos{\left (\beta \right )} + y \sin{\left (\beta \right )}\\
 x &= \frac{r + x_{1} \sin{\left (\beta \right )} \tan{\left (\beta \right )} - y_{1} \sin{\left (\beta \right )}}{\sin{\left (\beta \right )} \tan{\left (\beta \right )} + \cos{\left (\beta \right )}}\\
 y &= \frac{y_{1} \cos{\left (\beta \right )} + \left(r - x_{1} \cos{\left (\beta \right )}\right) \tan{\left (\beta \right )}}{\sin{\left (\beta \right )} \tan{\left (\beta \right )} + \cos{\left (\beta \right )}}
 \intertext{the minimised value of the distance is}
-d^2   &= \left(- x_{1} + \frac{r + x_{1} \sin{\left (\beta \right )} \tan{\left (\beta \right )} - y_{1} \sin{\left (\beta \right )}}{\sin{\left (\beta \right )} \tan{\left (\beta \right )} + \cos{\left (\beta \right )}}\right)^{2} \\
-    &+ \left(- y_{1} + \frac{y_{1} \cos{\left (\beta \right )} + \left(r - x_{1} \cos{\left (\beta \right )}\right) \tan{\left (\beta \right )}}{\sin{\left (\beta \right )} \tan{\left (\beta \right )} + \cos{\left (\beta \right )}}\right)^{2}\\
+d &= \sqrt{\left(x - x_1\right)^2 + \left(y - y_1\right)^2}
 \end{align*}
 
 After computing the minimising $\theta$ and corresponding $x$ and $y$, it is a good idea to check if $x$ and $y$ actually lie on the feature (if we choose to demarcate the lines into line-segments using the point features), and whether $\theta$ actually lies within the cone of the sensor. If both checks pass, then we can update the minimum distance of the sensor. In addition, we should also check the endpoints of the cone ($\theta = \pm\frac{\pi}{12}$), the formulae for $x$, $y$ and $d$ in those cases follow.
@@ -24,16 +23,13 @@ After computing the minimising $\theta$ and corresponding $x$ and $y$, it is a g
 \begin{align*}
 \theta &= \frac{\pi}{12}\\
 x &= \frac{r + x_{1} \sin{\left (\beta \right )} \tan{\left (\alpha + \frac{\pi}{12} \right )} - y_{1} \sin{\left (\beta \right )}}{\sin{\left (\beta \right )} \tan{\left (\alpha + \frac{\pi}{12} \right )} + \cos{\left (\beta \right )}}\\
-y &= \frac{y_{1} \cos{\left (\beta \right )} + \left(r - x_{1} \cos{\left (\beta \right )}\right) \tan{\left (\alpha + \frac{\pi}{12} \right )}}{\sin{\left (\beta \right )} \tan{\left (\alpha + \frac{\pi}{12} \right )} + \cos{\left (\beta \right )}}\\
-d^2   &= \left(- x_{1} + \frac{r + x_{1} \sin{\left (\beta \right )} \tan{\left (\alpha + \frac{\pi}{12} \right )} - y_{1} \sin{\left (\beta \right )}}{\sin{\left (\beta \right )} \tan{\left (\alpha + \frac{\pi}{12} \right )} + \cos{\left (\beta \right )}}\right)^{2} \\
-    &+ \left(- y_{1} + \frac{y_{1} \cos{\left (\beta \right )} + \left(r - x_{1} \cos{\left (\beta \right )}\right) \tan{\left (\alpha + \frac{\pi}{12} \right )}}{\sin{\left (\beta \right )} \tan{\left (\alpha + \frac{\pi}{12} \right )} + \cos{\left (\beta \right )}}\right)^{2}\\\\
+y &= \frac{y_{1} \cos{\left (\beta \right )} + \left(r - x_{1} \cos{\left (\beta \right )}\right) \tan{\left (\alpha + \frac{\pi}{12} \right )}}{\sin{\left (\beta \right )} \tan{\left (\alpha + \frac{\pi}{12} \right )} + \cos{\left (\beta \right )}}\\\\
 \theta &= -\frac{\pi}{12}\\
 x &= \frac{r - x_{1} \sin{\left (\beta \right )} \cot{\left (\alpha + \frac{5 \pi}{12} \right )} - y_{1} \sin{\left (\beta \right )}}{- \sin{\left (\beta \right )} \cot{\left (\alpha + \frac{5 \pi}{12} \right )} + \cos{\left (\beta \right )}}\\
 y &= \frac{y_{1} \cos{\left (\beta \right )} - \left(r - x_{1} \cos{\left (\beta \right )}\right) \cot{\left (\alpha + \frac{5 \pi}{12} \right )}}{- \sin{\left (\beta \right )} \cot{\left (\alpha + \frac{5 \pi}{12} \right )} + \cos{\left (\beta \right )}}\\
-d^2 &= \left(- x_{1} + \frac{r - x_{1} \sin{\left (\beta \right )} \cot{\left (\alpha + \frac{5 \pi}{12} \right )} - y_{1} \sin{\left (\beta \right )}}{- \sin{\left (\beta \right )} \cot{\left (\alpha + \frac{5 \pi}{12} \right )} + \cos{\left (\beta \right )}}\right)^{2} \\
-    &+ \left(- y_{1} + \frac{y_{1} \cos{\left (\beta \right )} - \left(r - x_{1} \cos{\left (\beta \right )}\right) \cot{\left (\alpha + \frac{5 \pi}{12} \right )}}{- \sin{\left (\beta \right )} \cot{\left (\alpha + \frac{5 \pi}{12} \right )} + \cos{\left (\beta \right )}}\right)^{2}
 \end{align*}
 
-Notice that these formulae were ``derived'' using sympy, so they are not simplified.
+The computation of $d$ remains unchanged (it uses the new values of $x$ and $y$ though).\\
+Note that these formulae were ``derived'' using sympy, so they are not simplified.
 
 \end{document}
